--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <span class="nav-link">Contact</span>
               </div>
               <div class="get-started navbar-get-started1">
-                <span class="navbar-text1">Get started</span>
+                <span class="navbar-text1" href="#home_section_articles">Get started</span>
               </div>
               <div id="open-mobile-menu" class="navbar-hamburger get-started">
                  <svg class="navbar-image1" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="white">
@@ -100,7 +100,7 @@
                 <span class="nav-link">Contact</span>
               </div>
               <div class="get-started">
-                <span class="navbar-text2">Get started</span>
+                <span class="navbar-text2" href="#home_section_articles">Get started</span>
               </div>
             </div>
             <div>
@@ -167,7 +167,7 @@
                 </header>
                 <div class="home-buttons1">
                   <div class="home-get-started1 button">
-                    <span class="home-text10">Get started</span>
+                    <span class="home-text10" href="#home_section_articles">Get started</span>
                   </div>
                   <div class="home-get-started2 button">
                     <span class="home-text11">View features</span>
@@ -296,7 +296,7 @@
                     </div>
                 </div>
                 <div class="home-get-started3 button">
-                    <span class="home-text27">Get started</span>
+                    <span class="home-text27" href="#home_section_articles">Get started</span>
                 </div>
             </div>
 
@@ -374,7 +374,7 @@
                 </main>
               </main>
               <div class="home-get-started4 button">
-                <span class="home-text28">Get started</span>
+                <span class="home-text28" href="#home_section_articles">Get started</span>
               </div>
             </div>
           </section>
@@ -565,7 +565,7 @@
             </div>
             <div class="home-buttons2">
               <div class="home-get-started5 button">
-                <span class="home-text32">Get started</span>
+                <span class="home-text32" href="#home_section_articles">Get started</span>
               </div>
               <div class="home-book-demo button">
                 <a class="home-text33" href="#home_section_articles">View our work</a>
