--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
             />
             <div class="navbar-nav-content">
               <div class="navbar-nav-links1">
-                <span class="navbar-link1 nav-link">Features</span>
-                <span class="nav-link">Why us</span>
+                <a href="#home_section_articles" class="navbar-link1 nav-link">Features</a>
+                <a href="#home_second_section" class="nav-link">Why us</a>
                 <span class="nav-link">Prices</span>
                 <span class="nav-link">Contact</span>
               </div>
               <div class="get-started navbar-get-started1">
-                <span class="navbar-text1" href="#home_section_articles">Get started</span>
+                <a class="navbar-text1" href="#home_section_articles">Get started</a>
               </div>
               <div id="open-mobile-menu" class="navbar-hamburger get-started">
                  <svg class="navbar-image1" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="white">
@@ -94,13 +94,13 @@
                 </div>
               </div>
               <div class="navbar-nav-links2">
-                <span class="nav-link">Features</span>
+                <a class="nav-link" href="#home_section_articles">Features</a>
                 <span class="nav-link">Why us</span>
                 <span class="nav-link">Prices</span>
                 <span class="nav-link">Contact</span>
               </div>
               <div class="get-started">
-                <span class="navbar-text2" href="#home_section_articles">Get started</span>
+                <a class="navbar-text2" href="#home_section_articles">Get started</a>
               </div>
             </div>
             <div>
@@ -167,7 +167,7 @@
                 </header>
                 <div class="home-buttons1">
                   <div class="home-get-started1 button">
-                    <span class="home-text10" href="#home_section_articles">Get started</span>
+                    <a class="home-text10" href="#home_section_articles">Get started</a>
                   </div>
                   <div class="home-get-started2 button">
                     <span class="home-text11">View features</span>
@@ -213,7 +213,7 @@
             </div>
           </div>
         </section>
-        <section class="home-section11">
+        <section class="home-section11" id="home_second_section">
           <h2 class="home-text12">
             We’re here to build your digital future — anytime.
           </h2>
@@ -296,7 +296,7 @@
                     </div>
                 </div>
                 <div class="home-get-started3 button">
-                    <span class="home-text27" href="#home_section_articles">Get started</span>
+                    <a class="home-text27" href="#home_section_articles">Get started</a>
                 </div>
             </div>
 
@@ -374,7 +374,7 @@
                 </main>
               </main>
               <div class="home-get-started4 button">
-                <span class="home-text28" href="#home_section_articles">Get started</span>
+                <a class="home-text28" href="#home_section_articles">Get started</a>
               </div>
             </div>
           </section>
@@ -565,7 +565,7 @@
             </div>
             <div class="home-buttons2">
               <div class="home-get-started5 button">
-                <span class="home-text32" href="#home_section_articles">Get started</span>
+                <a class="home-text32" href="#home_section_articles">Get started</a>
               </div>
               <div class="home-book-demo button">
                 <a class="home-text33" href="#home_section_articles">View our work</a>
